--- a/test.html
+++ b/test.html
@@ -1,116 +1,116 @@
-<!DOCTYPE html>
-<html lang="es">
+<!doctype html>
+<html lang="en">
+
 <head>
-  <meta charset="UTF-8" />
-  <title>Escáner de Códigos</title>
-  <script type="module">
-    import {
-      BrowserMultiFormatReader
-    } from 'https://cdn.jsdelivr.net/npm/@zxing/browser@0.0.10/+esm';
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="author" content="ZXing for JS">
 
-    const codeReader = new BrowserMultiFormatReader();
-    let selectedDeviceId = null;
-    let isScanning = false;
-    const scannedCodes = new Set();
+  <title>ZXing TypeScript | Decoding from camera stream</title>
 
-    const startScan = async () => {
-      if (!selectedDeviceId) {
-        const devices = await BrowserMultiFormatReader.listVideoInputDevices();
-        if (devices.length > 0) {
-          selectedDeviceId = devices[0].deviceId;
-        } else {
-          alert('No se encontraron cámaras.');
-          return;
-        }
-      }
-
-      codeReader.decodeFromVideoDevice(selectedDeviceId, 'video', (result, err) => {
-        if (result) {
-          const code = result.getText();
-          if (!scannedCodes.has(code)) {
-            scannedCodes.add(code);
-            addCodeToList(code);
-          }
-        }
-      });
-    };
-
-    const stopScan = () => {
-      codeReader.reset();
-    };
-
-    const addCodeToList = (code) => {
-      const list = document.getElementById('code-list');
-      const li = document.createElement('li');
-      li.textContent = code;
-      list.appendChild(li);
-    
-      // Beep
-      const ctx = new (window.AudioContext || window.webkitAudioContext)();
-      const osc = ctx.createOscillator();
-      const gain = ctx.createGain();
-      osc.type = 'square';
-      osc.frequency.value = 800;
-      gain.gain.value = 0.2;
-      osc.connect(gain);
-      gain.connect(ctx.destination);
-      osc.start();
-      osc.stop(ctx.currentTime + 0.1);
-    
-      // Vibración
-      if (navigator.vibrate) {
-        navigator.vibrate(100); // vibra 100ms
-      }
-    };
-    window.onload = async () => {
-      const toggleButton = document.getElementById('toggle-scan');
-      toggleButton.addEventListener('click', async () => {
-        if (isScanning) {
-          stopScan();
-          toggleButton.textContent = 'Iniciar escaneo';
-        } else {
-          await startScan();
-          toggleButton.textContent = 'Detener escaneo';
-        }
-        isScanning = !isScanning;
-      });
-    };
-  </script>
-  <style>
-    body {
-      font-family: sans-serif;
-      text-align: center;
-      margin-top: 20px;
-    }
-    #video {
-      width: 100%;
-      max-width: 400px;
-      height: auto;
-      border: 1px solid #ccc;
-    }
-    ul {
-      list-style: none;
-      padding: 0;
-      margin-top: 20px;
-    }
-    li {
-      background: #e0ffe0;
-      margin: 4px auto;
-      padding: 8px;
-      max-width: 300px;
-      border-radius: 4px;
-    }
-    button {
-      margin-top: 10px;
-      padding: 10px 20px;
-      font-size: 1em;
-    }
-  </style>
+  <link rel="stylesheet" rel="preload" as="style" onload="this.rel='stylesheet';this.onload=null"
+    href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
+  <link rel="stylesheet" rel="preload" as="style" onload="this.rel='stylesheet';this.onload=null"
+    href="https://unpkg.com/normalize.css@8.0.0/normalize.css">
+  <link rel="stylesheet" rel="preload" as="style" onload="this.rel='stylesheet';this.onload=null"
+    href="https://unpkg.com/milligram@1.3.0/dist/milligram.min.css">
 </head>
+
 <body>
-  <video id="video" autoplay muted></video>
-  <br />
-  <button id="toggle-scan">Iniciar escaneo</button>
-  <ul id="code-list"></ul>
+
+  <main class="wrapper" style="padding-top:2em">
+
+    <section class="container" id="demo-content">
+      <h1 class="title">Scan 1D/2D Code from Video Camera</h1>
+
+      <p>
+        <a class="button-small button-outline" href="../../index.html">HOME 🏡</a>
+      </p>
+
+      <div>
+        <a class="button" id="startButton">Start</a>
+        <a class="button" id="resetButton">Reset</a>
+      </div>
+
+      <div>
+        <video id="video" width="300" height="200" style="border: 1px solid gray"></video>
+      </div>
+
+      <div id="sourceSelectPanel" style="display:none">
+        <label for="sourceSelect">Change video source:</label>
+        <select id="sourceSelect" style="max-width:400px">
+        </select>
+      </div>
+
+      <label>Result:</label>
+      <pre><code id="result"></code></pre>
+
+      <p>See the <a href="https://github.com/zxing-js/library/tree/master/docs/examples/multi-camera/">source code</a>
+        for this example.</p>
+    </section>
+
+    <footer class="footer">
+      <section class="container">
+        <p>ZXing TypeScript Demo. Licensed under the <a target="_blank"
+            href="https://github.com/zxing-js/library#license" title="MIT">MIT</a>.</p>
+      </section>
+    </footer>
+
+  </main>
+
+  <script type="text/javascript" src="https://unpkg.com/@zxing/library@latest/umd/index.min.js"></script>
+  <script type="text/javascript">
+    window.addEventListener('load', function () {
+      let selectedDeviceId;
+      const codeReader = new ZXing.BrowserMultiFormatReader()
+      console.log('ZXing code reader initialized')
+      codeReader.listVideoInputDevices()
+        .then((videoInputDevices) => {
+          const sourceSelect = document.getElementById('sourceSelect')
+          selectedDeviceId = videoInputDevices[0].deviceId
+          if (videoInputDevices.length >= 1) {
+            videoInputDevices.forEach((element) => {
+              const sourceOption = document.createElement('option')
+              sourceOption.text = element.label
+              sourceOption.value = element.deviceId
+              sourceSelect.appendChild(sourceOption)
+            })
+
+            sourceSelect.onchange = () => {
+              selectedDeviceId = sourceSelect.value;
+            };
+
+            const sourceSelectPanel = document.getElementById('sourceSelectPanel')
+            sourceSelectPanel.style.display = 'block'
+          }
+
+          document.getElementById('startButton').addEventListener('click', () => {
+            codeReader.decodeFromVideoDevice(selectedDeviceId, 'video', (result, err) => {
+              if (result) {
+                console.log(result)
+                document.getElementById('result').textContent = result.text
+              }
+              if (err && !(err instanceof ZXing.NotFoundException)) {
+                console.error(err)
+                document.getElementById('result').textContent = err
+              }
+            })
+            console.log(`Started continous decode from camera with id ${selectedDeviceId}`)
+          })
+
+          document.getElementById('resetButton').addEventListener('click', () => {
+            codeReader.reset()
+            document.getElementById('result').textContent = '';
+            console.log('Reset.')
+          })
+
+        })
+        .catch((err) => {
+          console.error(err)
+        })
+    })
+  </script>
+
 </body>
+
 </html>
