--- a/test.html
+++ b/test.html
@@ -29,7 +29,7 @@
       </div>
 
       <div>
-        <video id="video" width="200" height="300" style="border: 1px solid gray"></video>
+        <video id="video" width="200" height="300"></video>
       </div>
 
       <div id="sourceSelectPanel" style="display:none">
