--- a/test.html
+++ b/test.html
@@ -121,7 +121,7 @@
 
         })
         .catch((err) => {
-          console.error(err)
+          addCodeToList(9788498383621);
         })
     })
 
