--- a/test.html
+++ b/test.html
@@ -135,7 +135,7 @@
       const item = document.createElement('li');
       item.className = "book-item";
       item.innerHTML = `
-        <img src=${libro.portada} alt="Tapa de ${libro.title}">
+        <img src=${libro.portada} alt="Tapa de ${libro.titulo}">
         <div class="book-info">
           <div><strong>${libro.titulo}</strong></div>
           <div><strong>${libro.autor}</strong></div>          
