--- a/test.html
+++ b/test.html
@@ -14,6 +14,26 @@
     href="https://unpkg.com/normalize.css@8.0.0/normalize.css">
   <link rel="stylesheet" rel="preload" as="style" onload="this.rel='stylesheet';this.onload=null"
     href="https://unpkg.com/milligram@1.3.0/dist/milligram.min.css">
+
+  <style>
+    .book-item {
+      display: flex;
+      align-items: center;
+      margin-bottom: 10px;
+    }
+
+    .book-item img {
+      width: 50px;
+      height: 75px;
+      margin-right: 10px;
+    }
+
+    .book-info {
+      display: flex;
+      flex-direction: column;
+    }
+  </style>
+  
 </head>
 
 <body>
