--- a/test.html
+++ b/test.html
@@ -32,23 +32,6 @@
       display: flex;
       flex-direction: column;
     }
-  #list-container {
-    max-height: 400px;
-    overflow-y: scroll;
-    margin-top: 20px;
-  }
-
-  #demo-content {
-    display: flex;
-    flex-direction: column;
-  }
-
-  #video-container {
-    position: fixed;
-    top: 10px;
-    left: 10px;
-    z-index: 10;
-  }    
   </style>
   
 </head>
@@ -60,28 +43,24 @@
     <section class="container" id="demo-content">
       <h1 class="title">Bibly</h1>
 
+      <div>
+        <a class="button" id="startButton">Start</a>
+        <a class="button" id="resetButton">Reset</a>
+      </div>
 
-      <div id="video-container">
+      <div>
         <video id="video" width="200" height="300"></video>
-        <div>
-          <a class="button" id="startButton">Start</a>
-          <a class="button" id="resetButton">Reset</a>
-        </div>
+      </div>
 
       <div id="sourceSelectPanel" style="display:none">
         <label for="sourceSelect">Change video source:</label>
         <select id="sourceSelect" style="max-width:400px">
         </select>
       </div>
-      </div>
 
-
-
-  <div id="list-container">
-    <ul id="list"></ul>
-  </div>
-
-      
+      <label>Result:</label>
+      <pre><code id="result"></code></pre>
+      <ul id="list"></ul>
     </section>
 
 
