--- a/test.html
+++ b/test.html
@@ -32,6 +32,23 @@
       display: flex;
       flex-direction: column;
     }
+  #list-container {
+    max-height: 400px;
+    overflow-y: scroll;
+    margin-top: 20px;
+  }
+
+  #demo-content {
+    display: flex;
+    flex-direction: column;
+  }
+
+  #video-container {
+    position: fixed;
+    top: 10px;
+    left: 10px;
+    z-index: 10;
+  }    
   </style>
   
 </head>
@@ -58,8 +75,6 @@
         </select>
       </div>
 
-      <label>Result:</label>
-      <pre><code id="result"></code></pre>
       <ul id="list"></ul>
     </section>
 
