--- a/test.html
+++ b/test.html
@@ -35,13 +35,21 @@
   #list-container {
     max-height: 400px;
     overflow-y: scroll;
-    margin-top: 200px;
+    margin-top: 20px;
   }
 
   #demo-content {
     display: flex;
     flex-direction: column;
   }
+
+  #video-container {
+    position: fixed;
+    top: 10px;
+    left: 10px;
+    z-index: 10;
+  }    
+  </style>
 
   </style>
   
@@ -126,7 +134,6 @@
             codeReader.decodeFromVideoDevice(selectedDeviceId, 'video', (result, err) => {
               if (result) {
                 console.log(result)
-                document.getElementById('result').textContent = result.text
                 
                 if (!scannedCodes.has(result.text)) {
                   scannedCodes.add(result.text);
@@ -136,7 +143,6 @@
               }
               if (err && !(err instanceof ZXing.NotFoundException)) {
                 console.error(err)
-                document.getElementById('result').textContent = err
               }
             })
             console.log(`Started continous decode from camera with id ${selectedDeviceId}`)
@@ -144,7 +150,6 @@
 
           document.getElementById('resetButton').addEventListener('click', () => {
             codeReader.reset()
-            document.getElementById('result').textContent = '';
             console.log('Reset.')
           })
 
