--- a/test.html
+++ b/test.html
@@ -34,7 +34,7 @@
     }
   #list-container {
     max-height: 400px;
-    overflow-y: scroll;
+    overflow-y: auto;
     margin-top: 20px;
   }
 
@@ -76,8 +76,11 @@
         <select id="sourceSelect" style="max-width:400px">
         </select>
       </div>
+      
+      <div id="list-container">
+        <ul id="list"></ul>
+      </div>
 
-      <ul id="list"></ul>
     </section>
 
 
