--- a/test.html
+++ b/test.html
@@ -32,23 +32,37 @@
       display: flex;
       flex-direction: column;
     }
-  #list-container {
-    max-height: 400px;
-    overflow-y: auto;
-    margin-top: 20px;
-  }
 
-  #demo-content {
-    display: flex;
-    flex-direction: column;
-  }
-
-  #video-container {
-    position: fixed;
-    top: 10px;
-    left: 10px;
-    z-index: 10;
-  }    
+    body,html{
+      margin:0;
+      height:100vh;
+    }
+    .container{
+      display: flex;
+      flex-direction: column;
+      background: #fafafa;
+      height: 100%;
+    }
+    
+    .video{
+      background-color:#3f51b5;
+      padding:1%;
+      color:white;
+    }
+    .list{
+      flex:1;
+      margin:2%;
+      padding:2%;
+      background-color:white;
+      box-shadow:0px 0px 5px black;
+      overflow-y: scroll
+    }
+    .footer{
+      background-color:#3f51b5;
+      padding:1%;
+      color:white;
+    }
+    
   </style>
 
   
