--- a/test.html
+++ b/test.html
@@ -45,7 +45,7 @@
     }
     
     #video-container{
-      background-color:#3f51b5;
+      box-shadow:0px 0px 5px black;
       padding:1%;
      }
     #list{
@@ -54,7 +54,8 @@
       padding:2%;
       background-color:white;
       box-shadow:0px 0px 5px black;
-      overflow-y: scroll
+      max-height: 300px;
+      overflow-y: auto;
     }
     #footer{
       background-color:#3f51b5;
@@ -81,9 +82,6 @@
 
       <div>
         <video id="video-container" width="200" height="300"></video>
-      </div>
-
-      <div id="sourceSelectPanel-container" style="display:none">
         <label for="sourceSelect">Change video source:</label>
         <select id="sourceSelect" style="max-width:400px">
         </select>
