--- a/test.html
+++ b/test.html
@@ -82,7 +82,7 @@
 
       <div>
         <video id="video-container" width="200" height="300"></video>
-        <div id="sourceSelectPanel-container" style="display:none">
+        <div id="sourceSelectPanel" style="display:none">
         <label for="sourceSelect">Change video source:</label>
         <select id="sourceSelect" style="max-width:400px">
         </select>
