--- a/test.html
+++ b/test.html
@@ -5,7 +5,6 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="author" content="ZXing for JS">
-  <meta name="google" content="notranslate">
   <title>Bibly</title>
 
   <link rel="stylesheet" rel="preload" as="style" onload="this.rel='stylesheet';this.onload=null"
@@ -62,7 +61,9 @@
       padding:1%;
       color:white;
     }
-    
+    button {
+      user-select: none;
+    }
   </style>
 
   
