--- a/test.html
+++ b/test.html
@@ -43,7 +43,7 @@
       height: 100%;
     }
     
-    #video-container{
+    #video{
       box-shadow:0px 0px 5px black;
       padding:1%;
      }
@@ -82,7 +82,7 @@
       </div>
 
       <div>
-        <video id="video-container" width="200" height="300"></video>
+        <video id="video" width="200" height="300"></video>
         <div id="sourceSelectPanel" style="display:none">
         <label for="sourceSelect">Change video source:</label>
         <select id="sourceSelect" style="max-width:400px">
