--- a/test.html
+++ b/test.html
@@ -171,6 +171,9 @@
         })
         .catch((err) => {
           addCodeToList(9788498383621);
+          addCodeToList(9788418797453);    
+          addCodeToList(9788420432120); 
+          addCodeToList(9786310038056);          
         })
     })
 
